# rule-based-verifier

./: .dockerignore  .gitignore  25.ipynb  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md
.cursor/: mcp.json
.cursor/rules/: ai-capability-honesty.mdc  ai-embedded-dsl-pattern.mdc  ai-explanation-format.mdc  ai-git-and-remotes.mdc  ai-ownership-and-governance.mdc  ai-workflow-core.mdc  mcp-layer.mdc
.github/workflows/: docker-publish.yml
emacs/: doom-extras.el
examples/: micrograd_semantic_trace.html  micrograd_value.py
mcp/: pyproject.toml  run_server.py
mcp/rule_based_verifier/: __init__.py  detect.py  paths.py  runner.py  search.py  server.py  solution_trace.py
mcp/scripts/: run-docker-mcp.sh
mcp/tests/: test_micrograd_value.py  test_paths.py  test_solution_trace.py
