[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rule-based-verifier"
version = "0.1.0"
description = "Local MCP server: verify repo changes (read, search, tests, lint) with a safe workspace boundary."
requires-python = ">=3.11"
dependencies = ["mcp>=1.8"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["rule_based_verifier"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
